# mermaid-diagram

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  dev-setup.sh  duzelti.sh  fix_package_json.sh  index.html  mermaid_gui.py  package-lock.json  package.json  package.json.backup  refactoring_setup.sh  svelte.config.js  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
assets/: script.js  style.css
docs/: CONTRIBUTING.md  CONTRIBUTORS.md
docs/examples/: class-diagram-example.mmd  flowchart-example.mmd  sequence-example.mmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: diagram.rs  file_ops.rs  mod.rs  system.rs
src-tauri/src/models/: diagram.rs  file.rs  mod.rs
src-tauri/src/services/: file_service.rs  mmdc_service.rs  mod.rs
src-tauri/src/utils/: mod.rs  path.rs  platform.rs
src/lib/components/editor/: CodeEditor.svelte  MonacoEditor.svelte  Preview.svelte  StatusBar.svelte  Toolbar.svelte
src/lib/components/layout/: Header.svelte  SplitPane.svelte
src/lib/services/: diagram-service.ts  error-service.ts  file-service.ts  preview-service.ts  tauri.ts
src/lib/stores/: app.ts  editor.ts  files.ts  notifications.ts  settings.ts
src/lib/styles/: components.css  variables.css
src/lib/types/: app.ts  index.ts  tauri.ts
src/lib/utils/: constants.ts  debounce.ts  formatting.ts  monaco-mermaid.ts
src/routes/: +layout.svelte  +page.svelte
(+5 files in other folders)
